version/0.7/_sources/examples/legacy_standalone/08_CPWG.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\08_CPWG.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_08_CPWG.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_08_CPWG.py:


EDB: fully parametrized CPWG design
-----------------------------------
This example shows how you can use HFSS 3D Layout to create a parametric design
for a CPWG (coplanar waveguide with ground).

.. GENERATED FROM PYTHON SOURCE LINES 31-35

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports. Importing the ``Hfss3dlayout`` object initializes it
on version 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 35-46

.. code-block:: Python


    import os

    import numpy as np

    from pyedb.dotnet.edb import Edb
    from pyedb.generic.general_methods import (
        generate_unique_folder_name,
        generate_unique_name,
    )








.. GENERATED FROM PYTHON SOURCE LINES 47-50

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: Python


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 54-57

Launch EDB
~~~~~~~~~~
Launch EDB.

.. GENERATED FROM PYTHON SOURCE LINES 57-62

.. code-block:: Python


    aedb_path = os.path.join(generate_unique_folder_name(), generate_unique_name("pcb") + ".aedb")
    print(aedb_path)
    edbapp = Edb(edbpath=aedb_path, edbversion="2024.1")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\AppData\Local\Temp\pyedb_prj_FDK\pcb_X76X4T.aedb




.. GENERATED FROM PYTHON SOURCE LINES 63-66

Define parameters
~~~~~~~~~~~~~~~~~
Define parameters.

.. GENERATED FROM PYTHON SOURCE LINES 66-75

.. code-block:: Python


    params = {
        "$ms_width": "0.4mm",
        "$ms_clearance": "0.3mm",
        "$ms_length": "20mm",
    }
    for par_name in params:
        edbapp.add_project_variable(par_name, params[par_name])








.. GENERATED FROM PYTHON SOURCE LINES 76-79

Create stackup
~~~~~~~~~~~~~~
Create a symmetric stackup.

.. GENERATED FROM PYTHON SOURCE LINES 79-83

.. code-block:: Python


    edbapp.stackup.create_symmetric_stackup(2)
    edbapp.stackup.plot()




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_08_CPWG_001.png
   :alt: Stackup  
   :srcset: /examples/legacy_standalone/images/sphx_glr_08_CPWG_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    copper does not exist in material library
    fr4_epoxy does not exist in material library
    fr4_epoxy does not exist in material library
    copper does not exist in material library
    fr4_epoxy does not exist in material library
    solder_mask does not exist in material library
    solder_mask does not exist in material library

    <module 'matplotlib.pyplot' from 'C:\\actions-runner\\_work\\pyedb\\pyedb\\.venv\\lib\\site-packages\\matplotlib\\pyplot.py'>



.. GENERATED FROM PYTHON SOURCE LINES 84-87

Draw planes
~~~~~~~~~~~
Draw planes.

.. GENERATED FROM PYTHON SOURCE LINES 87-99

.. code-block:: Python


    plane_lw_pt = ["0mm", "-3mm"]
    plane_up_pt = ["$ms_length", "3mm"]

    top_layer_obj = edbapp.modeler.create_rectangle(
        "TOP", net_name="gnd", lower_left_point=plane_lw_pt, upper_right_point=plane_up_pt
    )
    bot_layer_obj = edbapp.modeler.create_rectangle(
        "BOTTOM", net_name="gnd", lower_left_point=plane_lw_pt, upper_right_point=plane_up_pt
    )
    layer_dict = {"TOP": top_layer_obj, "BOTTOM": bot_layer_obj}








.. GENERATED FROM PYTHON SOURCE LINES 100-103

Draw trace
~~~~~~~~~~
Draw a trace.

.. GENERATED FROM PYTHON SOURCE LINES 103-109

.. code-block:: Python


    trace_path = [["0", "0"], ["$ms_length", "0"]]
    edbapp.modeler.create_trace(
        trace_path, layer_name="TOP", width="$ms_width", net_name="sig", start_cap_style="Flat", end_cap_style="Flat"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyedb.dotnet.edb_core.edb_data.primitives_data.EdbPath object at 0x0000017338266E90>



.. GENERATED FROM PYTHON SOURCE LINES 110-113

Create trace to plane clearance
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a trace to the plane clearance.

.. GENERATED FROM PYTHON SOURCE LINES 113-124

.. code-block:: Python


    poly_void = edbapp.modeler.create_trace(
        trace_path,
        layer_name="TOP",
        net_name="gnd",
        width="{}+2*{}".format("$ms_width", "$ms_clearance"),
        start_cap_style="Flat",
        end_cap_style="Flat",
    )
    edbapp.modeler.add_void(layer_dict["TOP"], poly_void)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 125-128

Create ground via padstack and place ground stitching vias
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a ground via padstack and place ground stitching vias.

.. GENERATED FROM PYTHON SOURCE LINES 128-142

.. code-block:: Python


    edbapp.padstacks.create(
        padstackname="GVIA",
        holediam="0.3mm",
        paddiam="0.5mm",
    )

    yloc_u = "$ms_width/2+$ms_clearance+0.25mm"
    yloc_l = "-$ms_width/2-$ms_clearance-0.25mm"

    for i in np.arange(1, 20):
        edbapp.padstacks.place([str(i) + "mm", yloc_u], "GVIA", net_name="GND")
        edbapp.padstacks.place([str(i) + "mm", yloc_l], "GVIA", net_name="GND")








.. GENERATED FROM PYTHON SOURCE LINES 143-146

Save and close EDB
~~~~~~~~~~~~~~~~~~
Save and close EDB.

.. GENERATED FROM PYTHON SOURCE LINES 146-148

.. code-block:: Python

    edbapp.save_edb()
    edbapp.close_edb()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.656 seconds)


.. _sphx_glr_download_examples_legacy_standalone_08_CPWG.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 08_CPWG.ipynb <08_CPWG.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 08_CPWG.py <08_CPWG.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
